crates/roomrs/tests/ui/fail/dao_result_unit.rs
use roomrs::dao;

#[dao]
trait ItemDao {
    #[update("UPDATE items SET value = 1")]
    fn update(&self) -> roomrs::Result<()>;
}

fn main() {}
